# virtual-hil-automotive-ecu

./: CMakeLists.txt
common/: protocol.c  protocol.h
docs/daily-logs/: 2026-06-27.md  2026-06-28.md
node_a_pedal_ecu/: CMakeLists.txt  main.c  pedal_task.c
node_b_engine_ecu/: CMakeLists.txt  engine_task.c  main.c
node_c_cluster_ecu/: CMakeLists.txt  cluster_task.c  main.c
